New quotes + WWF money transfer

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: fact
-title: 
+title:
 date: 2020-09-10
 description:
-image: /assets/images/visualizing-sound/visualizing.jpg
+image:
 
 ---
 <p> Learning about Climate Change </p>
